# routes/cardRouter.js
@@ -6,13 +6,14 @@ import {
   getAllCards,
   getOneCard,
 } from '../controllers/cardController.js';
+import { auth } from '../middlewares/authenticate.js';
 
 const cardRouter = express.Router();
 
-cardRouter.post('/', addCard);
-cardRouter.put('/:cardId', editCard);
-cardRouter.delete('/:cardId', deleteCard);
-cardRouter.get('/', getAllCards);
-cardRouter.get('/:cardId', getOneCard);
+cardRouter.post('/', auth, addCard);
+cardRouter.put('/:cardId', auth, editCard);
+cardRouter.delete('/:cardId', auth, deleteCard);
+cardRouter.get('/', auth, getAllCards);
+cardRouter.get('/:cardId', auth, getOneCard);
 
 export default cardRouter;
